# vectordb-recipes

./: .gitignore  README.md  compile_testing.js  compile_testing.py  joined-requirements.txt  package.json  requirements.txt  updated_README.md
.gitbub/workflows/: docs-test.yml
.github/workflows/: TEMP.yml  black.yml  docs-test.yml  examples-test.yml
applications/Chatbot_RAG_with_FASTAPI/: README.md  main.py
applications/Chatbot_with_Parler_TTS/: .env-example  README.md  constants.py  main.py  prompt.py  rag_lance.py  requirements.txt  tts_module.py
applications/Chatbot_with_memory/: README.md  main.ipynb  main.py
applications/Fastapi_websocket_chatboat/: README.md  main.py  main_websocket.py
applications/GTE_mlx_RAG/: README.md  (+4 more)
applications/multimodal-recipe-agent/: README.md  agent.py  app.py  import.py  multimodal-recipe-agent.ipynb  pyproject.toml
code_qa_bot/: code_qa_bot.py
examples/: main.ipynb
examples/nvidia-rag-blueprint-lancedb/: .gitignore  README.md  docker-compose.override.yml  lancedb_vdb.py  nvidia_blueprint_changes.md  prepare_lancedb.py  pyproject.toml  requirements.txt
multimodal_search/: multimodal_search.ipynb  multimodal_search.py
road_to_clip/: 2-positional_encoding.py  README.md
serverless_lancedb/: serverless_lancedb.py  serverless_lancedb_with_s3_and_lambda.ipynb
serverless_qa_bot/: serverless_qa_bot.py  serverless_qa_bot_with_modal_and_langchain.ipynb
youtube_transcript_search/: youtube_transcript_search.ipynb  youtube_transcript_search.js  youtube_transcript_search.py  youtube_transcript_search_with_nodejs.ipynb
(+610 files in other folders)
